Added documentation for all commands; Reordered makro definition for better structure.

--- a/Brief.tex
+++ b/Brief.tex
@@ -39,7 +39,7 @@
 % Aussehen
 \Briefkopf{}
 \Briefpapier{}
-\Signature{Unterschrift.png}
+\Signatur{Unterschrift.png}
 
 \begin{document}
 	\maketitle{}
