Added a \clearpage to always start on a fresh page to \maketitle.

--- a/brbrief.dtx
+++ b/brbrief.dtx
@@ -617,6 +617,7 @@ Running "make install" installs the files in the local TeX tree.
 % Die erste Seite setzen.
 %    \begin{macrocode}
 \renewcommand{\maketitle}{%
+    \clearpage
     \pagestyle{brief}%
     \thispagestyle{briefersteseite}%
     \kopfbereich{}%
